# yelukerest

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  package-lock.json  package.json  test.js
authapp/: .dockerignore  .eslintrc  .gitignore  Dockerfile  README.md  auth.go  auth_test.go  go.mod  jwt.go  jwt_test.go  main.go  main_test.go  mockcas.go  openapi.go  openapi_test.go  package-lock.json  package.json  run.sh  security.go  security_test.go  token.go  token_test.go
authapp2/: Cargo.toml  Dockerfile  README.md  run.sh
authapp2/src/: main.rs
backup/: Dockerfile  README.md  README.old.md  backup.sh  install.sh  run.sh
caddy/: Caddyfile  Dockerfile  development.caddyfile  production.caddyfile
certbot/: entrypoint.sh
db/: Dockerfile  pgbackrest-archive-push.sh
docs/: admin-api.md  api-client-security.md  append-only-grade-history.md  artifacts.md  auth-jwt-flow.md  image-budget.md  platform-compatibility.md  schema-audit-2026-07-06.md  smoke-test.md
elmclient/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  deno-elm-test-rs.sh  elm-package.json  elm.json  package-lock.json  package.json  run.sh  webpack.config.js
graphql/: Dockerfile  package-lock.json  run.sh  (+1 more)
pythonclient/: .gitignore  Pipfile  README.md  api_client.py  db_client.py  names.py  porting.py  pyproject.toml  requirements.txt  rest_client.py  yaml_text.py  yelukerest_client.py
pythonclient/models/: quiz.py
pythonclient/tests/: test_api_client.py  test_db_client_yaml.py
(+397 files in other folders)
