[package]
name = "authapp2"
version = "0.1.0"
authors = ["Kyle L. Jensen <kljensen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
listenfd = "0.3"
env_logger = "0.7.1"