[package]
name = "authapp2"
version = "0.1.0"
authors = ["Kyle L. Jensen <kljensen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0-alpha.6"
actix-session = "0.3.0-alpha.3"
actix-redis = { version = "0.8.0-alpha.1", features = ["web"] }
env_logger = "0.6"
serde = { version = "^1.0", features = ["derive"] }
actix-service = "1.0.0"
actix-http = "1.0.0"
serde_json = "1.0.40"
time = "0.1.42"
listenfd = "0.3"
