[project]
name = "pythonclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "jinja2>=3.1.5",
    "ldap3>=2.9.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.10",
]
